# llm-freeway

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  llm-config.json  main.py  pyproject.toml  test_integration.py
.github/workflows/: python-app.yml  test-keycloak.yml  test-native.yml
llm_freeway/: api.py  auth.py  database.py  settings.py
src/: api.py  auth.py  database.py  settings.py
tests/: conftest.py  test.db  test_api.py  test_auth.py  test_database.py
